testsuite/tests/parser/should_fail/position001.stderr

position001.hs:6:33: error: [GHC-58481]
    Parse error on input ‘module’.
